# RGB

./: CMakeLists.txt  README.md
headers/: Circle.h
src/: CMakeLists.txt  Circle.cpp  main.cpp
